--- a/Fitness Website.html
+++ b/Fitness Website.html
@@ -89,7 +89,39 @@ function showSlides(n) {
       <p>Our workout tutorials are designed by certified trainers who understand the challenges of working out at home and know how to create workouts that are fun, challenging, and effective. Whether you're looking to build strength, burn fat, improve your flexibility, or simply stay active and healthy, we have a program that will meet your needs and help you achieve your goals.</p>
 
      
+      <div class="container">
 
+        <div class="gallery">
+          <img src="arms.jpg" class="hover-shadow">
+            <a href=""><div class="desc"> Description of image</div></a>
+        </div>
+  
+        <div class="gallery">
+          <img src="abs.jpg" class="hover-shadow">
+          <a href=""><div class="desc"> Description of image</div></a>
+        </div>
+  
+        <div class="gallery">
+          <img src="booty.jpg" class="hover-shadow">
+          <a href=""><div class="desc"> Description of image</div></a>
+        </div>
+  
+        <div class="gallery">
+          <img src="belly.jpg" class="hover-shadow">
+          <a href=""><div class="desc"> Description of image</div></a>
+        </div>
+  
+        <div class="gallery">
+          <img src="legs.jpg" class="hover-shadow">
+          <a href=""><div class="desc"> Description of image</div></a>
+        </div>
+  
+        <div class="gallery">
+          <img src="weightloss.jpg" class="hover-shadow">
+          <a href=""><div class="desc"> Description of image</div></a>
+        </div>
+  
+     </div>
      
 </body>
 </html>
