--- a/Fitness Website.html
+++ b/Fitness Website.html
@@ -4,12 +4,14 @@
     <title>I FIT</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href = "https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href = "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <script src = "https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="custom.css">
+    <link rel="icon" href="I fit Icon Logo.png">
   </head>
 
   <div class="navbar">
+    <img src="Logo-removebg-preview.png" class="logo">
     <a href="#home">Contact</a>
     <a href="#news">About Us</a> 
     <div class="dropdown">
