changes by rachel

--- a/Fitness Website.html
+++ b/Fitness Website.html
@@ -125,8 +125,8 @@ function showSlides() {
 }
       </script>
       
-      <h1>IFIT: Your Ultimate Guide For Health and Fitness</h1>
-      <p>Welcome to IFIT!, where we believe that you don't need a gym membership or fancy equipment to get fit and healthy. Our goal is to provide you with effective, convenient, and affordable workout solutions that you can do anytime, anywhere, with minimal equipment or no equipment at all.</p><br>
+      <h1>I FIT: Your Ultimate Guide For Health and Fitness</h1>
+      <p>Welcome to I FIT! Where we believe that you don't need a gym membership or fancy equipment to get fit and healthy. Our goal is to provide you with effective, convenient, and affordable workout solutions that you can do anytime, anywhere, with minimal equipment or no equipment at all.</p>
       <p>Our workout tutorials are designed by certified trainers who understand the challenges of working out at home and know how to create workouts that are fun, challenging, and effective. Whether you're looking to build strength, burn fat, improve your flexibility, or simply stay active and healthy, we have a program that will meet your needs and help you achieve your goals.</p>
 
       <h1> <i>Start your Fitness Journey with Us!</i></h1>
@@ -138,7 +138,7 @@ function showSlides() {
         </div>
   
         <div class="gallery">
-          <a href=""><img src="abs.jpg" class="hover-shadow"></a>
+          <a href="Workout/Abs/Abs.html" ><img src="abs.jpg" class="hover-shadow"></a>
 
         </div>
   
