--- a/workout/Abs/Abs.html
+++ b/workout/Abs/Abs.html
@@ -151,7 +151,7 @@
       <br>
      
       <img src="2.jpg" class="image">
-      <h1>The Best Abs Workout: The Only 6 Exercises You Need to Get a Six-Pack</h1>
+      <h1> The Only 6 Exercises You Need to Get a Six-Pack</h1>
       <p class="a">The recipe for six-pack abs isn’t all that complicated: Crank out an abs workout, eat a nutrient-rich diet, and consume fewer late-night pizzas in a single sitting. The undisputed holy grail of men’s fitness is good for more than just an extra boost of confidence whenever you have cause to peel off your shirt, too. “The best way to avoid injury, whether in the gym, at home, or at the workplace, is by building a strong core,” says Edwin Wealth, NASM-CPT and trainer at Equinox. Want to do yoga better? Run faster? Squat heavier? Carry the groceries without wincing? It all begins with your core.<br><br>
       But alas, this process doesn’t happen overnight. And by now, the washboard abs industrial complex has produced such a dizzying volume of exercises, tricks, and gizmos promising to transform your midsection into a Hemsworth brother’s midsection that even after you’ve settled on a strategy, it’s hard not to wonder whether all that diligence and discipline is really making a difference.<br><br>
       Good news: Thanks to some of the best trainers in the country, we’re going to help you out. Below are their favorite abs exercises, along with a few pro tips to ensure that you’re executing each one perfectly. Incorporate them à la carte into your existing routine—or, if you’re feeling ambitious, turn all six into an abs workout circuit. Try two sets of each movement, resting for 30 seconds between each set.<br><br>
