--- a/Fitness Website.html
+++ b/Fitness Website.html
@@ -7,11 +7,11 @@
     <link href = "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src = "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="custom.css">
-    <link rel="icon" href="I fit Icon Logo.png">
+    <link rel="icon" href="I fit Icon.jpg">
   </head>
 
   <div  id="navbar" > 
-    <img src="Logo-removebg-preview.png" class="logo">
+    <img src="Logo 1.png" id="logo">
     <a href="">Contact</a>
     <a href="#footer">About Us</a> 
     <div id="dropdown">
@@ -186,6 +186,14 @@ function showSlides() {
         <p>We believe fitness should be accessible to everyone, everywhere, regardless of income level or access to a gym. That's why we offer lots of free, workout videos, the most affordable and effective workout programs on the web, meal plans, and helpful health and fitness information.</p>
         
       </div>
+
+      
+<h3>Show an email field (allows multiple email addresses). Separate each email address with a comma:</h3>
+<form action="/action_page.php">
+  <label for="emails">Enter email addresses:</label>
+  <input type="email" id="emails" name="emails" multiple>
+  <input type="submit">
+</form>
 
       <div class="details2">
         <h3>Contact Us</h3>
