--- a/webpages/Contact Us.html
+++ b/webpages/Contact Us.html
@@ -140,4 +140,26 @@
 </div>
 </div>
 </body>
+<footer class="text-black pt-5 " style="background-color: grey;" id="footer" >
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <a href="About Us.html" style="text-decoration: none; color: black; " ><p>About Us</p></a>
+        <a href="Contact Us.html" style="text-decoration: none; color: black; "><p>Contact Us</p></a>
+        <p>Services</p>
+      </div>
+      <div class="col-md-8">
+        <h4>Get our wellness newsletter</h4>
+        <p>Filter out the noise and nurture your inbox with health and wellness </p>
+        <p>advice that's inclusive and rooted in medical expertise.</p>
+        <div class="d-flex">
+        <form >  
+              <input type="text" class="form-control form-control-sm" placeholder="Enter your email">       
+            </form>
+            <button class="btn btn-dark btn-sm ms-2" type="button" >SIGN UP</button>
+      </div>
+      </div>
+    </div>
+  </div>
+</footer>
 </html>
