--- a/webpages/Contact Us.html
+++ b/webpages/Contact Us.html
@@ -53,7 +53,7 @@
   }
   
   #navbar a:hover, #dropdown:hover #dropbtn {
-    background-color: white;
+    background-color: lightgray;
     color: black;
   }
   
