--- a/webpages/arms.html
+++ b/webpages/arms.html
@@ -52,7 +52,7 @@
   }
   
   #navbar a:hover, #dropdown:hover #dropbtn {
-    background-color: white;
+    background-color: lightgray;
     color: black;
   }
   
@@ -218,8 +218,8 @@
         <div class="container">
           <div class="row">
             <div class="col-md-4">
-              <a href="About Us/About Us.html" style="text-decoration: none; color: black; " ><p>About Us</p></a>
-              <a href="Contact Us/Contact Us.html" style="text-decoration: none; color: black; "><p>Contact Us</p></a>
+              <a href="About Us.html" style="text-decoration: none; color: black; " ><p>About Us</p></a>
+              <a href="Contact Us.html" style="text-decoration: none; color: black; "><p>Contact Us</p></a>
               <p>Services</p>
             </div>
             <div class="col-md-8">
