--- a/webpages/weight_lost.html
+++ b/webpages/weight_lost.html
@@ -52,7 +52,7 @@
   }
   
   #navbar a:hover, #dropdown:hover #dropbtn {
-    background-color: white;
+    background-color: lightgray;
     color: black;
   }
   
