final edit by rose

--- a/webpages/Abs.html
+++ b/webpages/Abs.html
@@ -53,7 +53,7 @@
   }
   
   #navbar a:hover, #dropdown:hover #dropbtn {
-    background-color: white;
+    background-color: lightgray;
     color: black;
   }
   
@@ -131,10 +131,13 @@
         text-indent: 50px;
         font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       }
+      
       p.b {
         padding-left: 100px;
+        padding-right: 550px;
         font-size: 18px;
         font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        text-align: justify;
       }
 
       </style>
@@ -142,8 +145,8 @@
  <body>
   <div  id="navbar" > 
     <img src="Logo 1.png" id="logo">
-    <a href="#footer">Contact Us</a>
-    <a href="#footer">About Us</a> 
+    <a href="membership.html">Membership</a>
+    <a href="Videos.html">Workout Videos</a> 
     <div id="dropdown">
       <button id="dropbtn">Workout Tutorials
         <i class="fa fa-caret-down"></i>
@@ -157,16 +160,9 @@
         <a href="weight_lost.html">Weightloss Workout</a> 
       </div>
     </div>
-    <div id="dropdown">
-      <button id="dropbtn">Home
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div id="dropdown-content">
-        <a href="Videos.html">Workout Videos</a> 
-        <a href="membership.html">Membership</a>
-      </div>
-    </div>
+      <a href="Fitness Website.html">Home</a>
   </div>
+  <br>
 
       <img src="images/2.jpg" class="image">
       <br><h1>The Only 6 Exercises You Need to Get a Six-Pack</h1><br>
@@ -223,10 +219,10 @@
                 <form >  
                       <input type="text" class="form-control form-control-sm" placeholder="Enter your email">       
                     </form>
-                    <button class="btn btn-dark btn-sm ms-2" type="button" >SIGN UP</button>
+                    <button class="btn btn-dark btn-sm ms-2" type="button" title="Click here to sign up">SIGN UP</button>
               </div>
               </div>
             </div>
-          </div>
+          </div><br><br>
         </footer>
     </html>
