--- a/webpages/Videos.html
+++ b/webpages/Videos.html
@@ -124,7 +124,7 @@ h1 {
 button {
   margin-top: 15px;
   margin-bottom: 10px;
-  background-color: white;
+  background-color: lightblue;
   border: 1px solid rgba(0, 0, 0, 0.555);
   border-radius: 5px;
   padding:5px;  
@@ -146,10 +146,11 @@ button:hover {
   </style>
 
   <body>
+   
     <div  id="navbar" > 
       <img src="Logo 1.png" id="logo">
-      <a href="#footer">Contact Us</a>
-      <a href="#footer">About Us</a> 
+      <a href="membership.html">Membership</a>
+      <a href="Videos.html">Workout Videos</a> 
       <div id="dropdown">
         <button id="dropbtn">Workout Tutorials
           <i class="fa fa-caret-down"></i>
@@ -163,17 +164,8 @@ button:hover {
           <a href="weight_lost.html">Weightloss Workout</a> 
         </div>
       </div>
-      <div id="dropdown">
-        <button id="dropbtn">Home</a>
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div id="dropdown-content">
-          <a href="Videos.html">Workout Videos</a> 
-          <a href="membership.html">Membership</a>
-        </div>
-      </div>
+        <a href="Fitness Website.html">Home</a>
     </div>
-
   <div class="container-fluid py-5 px-5 bg-light text-black" id=mytext>
     <br><br><h2>The 12 Best YouTube Workout Channels to Help You Meet <br> Your Fitness Goals at Home</h2>
     <h1>“Take care of your body. It's the only place you have to live.”</h1>
@@ -183,7 +175,7 @@ button:hover {
   <div class="card">
 
   <div class="videos">
-  <iframe width="245" height="170" src="https://www.youtube.com/embed/ToUCfDEeogQ" title="Get Toned Abs - 10 Min Workout | Get Toned Challenge" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <iframe width="260" height="170" src="https://www.youtube.com/embed/ToUCfDEeogQ" title="Get Toned Abs - 10 Min Workout | Get Toned Challenge" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </div>
   <div class="title"> <h1>Chloe Ting</h1>
   </div>
@@ -196,7 +188,7 @@ button:hover {
 
   <div class="card">
   <div class="videos">
-  <iframe width="245" height="170" src="https://www.youtube.com/embed/Bl9_qRFam4M" title="10 min TONED ARMS Workout (At Home Quick Burn)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <iframe width="260" height="170" src="https://www.youtube.com/embed/Bl9_qRFam4M" title="10 min TONED ARMS Workout (At Home Quick Burn)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </div>
   <div class="title"> <h1>MadFit</h1>
   </div>
@@ -208,7 +200,7 @@ button:hover {
 
   <div class="card">
   <div class="videos">
-  <iframe width="245" height="170" src="https://www.youtube.com/embed/NjrLvG4ba94" title="10 Min FULL BODY Toning Routine For Women | Chair Workout (Effective!)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <iframe width="260" height="170" src="https://www.youtube.com/embed/NjrLvG4ba94" title="10 Min FULL BODY Toning Routine For Women | Chair Workout (Effective!)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </div>
   <div class="title"> <h1>Afrifitness</h1>
   </div>
@@ -220,7 +212,7 @@ button:hover {
 
   <div class="card">
   <div class="videos">
-  <iframe width="245" height="170"  src="https://www.youtube.com/embed/UJ1sdf-Xxb0" title="45 Min of Stretches to Increase Range of Motion | Level 1 w/ Jana Webb" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <iframe width="260" height="170"  src="https://www.youtube.com/embed/UJ1sdf-Xxb0" title="45 Min of Stretches to Increase Range of Motion | Level 1 w/ Jana Webb" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </div>
   <div class="title"> <h1>Evolve Functional Fitness Workouts</h1>
   </div>
@@ -232,7 +224,7 @@ button:hover {
 
   <div class="card">
   <div class="videos">
-  <iframe width="245" height="170" src="https://www.youtube.com/embed/kZvOxavx4ew" title="30 Minute HIIT Tabata Workout with Weights at Home - Total Body Dumbbell Training" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <iframe width="260" height="170" src="https://www.youtube.com/embed/kZvOxavx4ew" title="30 Minute HIIT Tabata Workout with Weights at Home - Total Body Dumbbell Training" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </div>
   <div class="title"> <h1>HASfit</h1>
   </div>
@@ -244,7 +236,7 @@ button:hover {
 
   <div class="card">
   <div class="videos">
-  <iframe width="245" height="170" src="https://www.youtube.com/embed/aCkkkeVU_gg" title="30-Minute Standing HIIT Workout With Jenna Willis | POPSUGAR FITNESS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <iframe width="260" height="170" src="https://www.youtube.com/embed/aCkkkeVU_gg" title="30-Minute Standing HIIT Workout With Jenna Willis | POPSUGAR FITNESS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </div>
   <div class="title"> <h1>POPSUGAR Fitness</h1>
   </div>
@@ -256,7 +248,7 @@ button:hover {
 
   <div class="card">
   <div class="videos">
-  <iframe width="245" height="150" src="https://www.youtube.com/embed/KcrIu7GlXnY" title="20-Minute Bicep Workout with Dumbbells" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <iframe width="260" height="170" src="https://www.youtube.com/embed/KcrIu7GlXnY" title="20-Minute Bicep Workout with Dumbbells" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </div>
   <div class="title"> <h1>Nourish Move Love</h1>
   </div>
@@ -268,7 +260,7 @@ button:hover {
 
   <div class="card">
   <div class="videos">
-  <iframe width="245" height="150" src="https://www.youtube.com/embed/52uvwCi03yE" title="Denise Austin: Ultimate Fat Burn Workout" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <iframe width="260" height="170" src="https://www.youtube.com/embed/52uvwCi03yE" title="Denise Austin: Ultimate Fat Burn Workout" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </div>
   <div class="title"> <h1>Be FiT</h1>
   </div>
@@ -280,7 +272,7 @@ button:hover {
 
   <div class="card">
   <div class="videos">
-  <iframe width="245" height="170"src="https://www.youtube.com/embed/lNmX7xvJTjg" title="How to Balance Running + Gym Workouts // Common Mistakes to Avoid" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <iframe width="260" height="170"src="https://www.youtube.com/embed/lNmX7xvJTjg" title="How to Balance Running + Gym Workouts // Common Mistakes to Avoid" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </div>
   <div class="title"> <h1>Natacha Océane</h1>
   </div>
@@ -292,7 +284,7 @@ button:hover {
   
   <div class="card">
   <div class="videos">
-  <iframe width="245" height="150" src="https://www.youtube.com/embed/1UeQg-TLIUI" title="20 Min Cardio Pilates Workout (Full Body Fat Burn + Low Impact Toning)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <iframe width="260" height="170" src="https://www.youtube.com/embed/1UeQg-TLIUI" title="20 Min Cardio Pilates Workout (Full Body Fat Burn + Low Impact Toning)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </div>
   <div class="title"> <h1>Action Jacquelyn</h1>
   </div>
@@ -305,7 +297,7 @@ button:hover {
 
   <div class="card">
   <div class="videos">
-  <iframe width="245" height="170" src="https://www.youtube.com/embed/jSGzr1npOT8" title="30 Minute Tempo Treadmill Run!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <iframe width="260" height="170" src="https://www.youtube.com/embed/jSGzr1npOT8" title="30 Minute Tempo Treadmill Run!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </div>
   <div class="title"> <h1>IBX Running</h1>
   </div>
@@ -318,7 +310,7 @@ button:hover {
 
   <div class="card">
   <div class="videos">
-  <iframe width="245" height="170" s src="https://www.youtube.com/embed/ApJIzrHjx5E" title="Bunny Slope Workout #16 - Full Body for Complete Beginners!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <iframe width="260" height="170" s src="https://www.youtube.com/embed/ApJIzrHjx5E" title="Bunny Slope Workout #16 - Full Body for Complete Beginners!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </div>
   <div class="title"> <h1> Zuzka Light</h1>
   </div>
@@ -345,10 +337,10 @@ button:hover {
         <form class="d-flex" >  
               <input type="text" class="form-control form-control-sm" placeholder="Enter your email">       
         </form>
-        <button class="btn btn-dark btn-sm me-2" type="button" >SIGN UP</button>
+        <button class="btn btn-dark btn-sm me-2" type="button" title="Click here to sign up">SIGN UP</button>
       </div>
       </div>
     </div>
-  </div>
+  </div><br><br>
 </footer>
 </html>
