--- a/webpages/arms.html
+++ b/webpages/arms.html
@@ -130,8 +130,10 @@
       }
       p.b {
         padding-left: 100px;
+        padding-right: 550px;
         font-size: 18px;
         font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        text-align: justify;
       }
 
       </style>
@@ -140,8 +142,8 @@
 
     <div  id="navbar" > 
       <img src="Logo 1.png" id="logo">
-      <a href="#footer">Contact Us</a>
-      <a href="#footer">About Us</a> 
+      <a href="membership.html">Membership</a>
+      <a href="Videos.html">Workout Videos</a> 
       <div id="dropdown">
         <button id="dropbtn">Workout Tutorials
           <i class="fa fa-caret-down"></i>
@@ -155,22 +157,15 @@
           <a href="weight_lost.html">Weightloss Workout</a> 
         </div>
       </div>
-      <div id="dropdown">
-        <button id="dropbtn">Home
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div id="dropdown-content">
-          <a href="Videos.html">Workout Videos</a> 
-          <a href="membership.html">Membership</a>
-        </div>
-      </div>
+        <a href="Fitness Website.html">Home</a>
     </div>
+  
       <br>
      
-      <img src="images/3.jpg" class="image">
+      <img src="images/3.jpg" class="image"><br>
       <h1>Arm-Toning Dumbbell Exercises</h1>
       <p class="a">Strong, toned arms do more than just look good and boost your confidence. There are also key health benefits that come from working out your arm muscles. Having stronger arms and shoulders can reduce your risk of injury and can help improve your posture. Stronger arm muscles also help protect your bones and stabilize your joints.
-      </p>
+      </p><br><br>
 
       <h2 class="a"><img src="images/wristcurl.gif"class="gif1"> 1. Palms-up wrist curl </h2>
       <p class="b"> <b>Do it:</b> Start with 5- or 10-pound dumbbells, or a lighter weight if needed.Sit straight up in a chair or on a bench, with your knees at a 90-degree angle to the floor.
@@ -187,7 +182,7 @@
       <b>Trainer tip:</b> Follow the same directions as above, except with your palms facing down instead of up </p><br><br>
       <br><br><br><br><br><br><br><br><br>
 
-      <h2 class="a"><img src="images/bicep-curl.gif"class="gif1"> 3. 3. Bicep curls</h2>
+      <h2 class="a"><img src="images/bicep-curl.gif"class="gif1"> 3. Bicep curls</h2>
       <p class="b"><b>Do it:</b> Hold a dumbbell in each hand, with your arms down by your sides.
         <br><br>Inhale. As you exhale, slowly curl the weights up toward your shoulders.
         <br><br>Focus on using your biceps to pull the weights up. Don’t sway, lean forward, or arch your back as you bring them up. Keep your core engaged and your back straight.
@@ -230,11 +225,11 @@
               <form >  
                     <input type="text" class="form-control form-control-sm" placeholder="Enter your email">       
                   </form>
-                  <button class="btn btn-dark btn-sm ms-2" type="button" >SIGN UP</button>
+                  <button class="btn btn-dark btn-sm ms-2" type="button" title="Click here to sign up">SIGN UP</button>
             </div>
             </div>
           </div>
-        </div>
+        </div><br>
       </footer>
     </body>
     </html>
