--- a/webpages/butt.html
+++ b/webpages/butt.html
@@ -132,19 +132,22 @@
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
       
-  p.b {
-    padding-left: 100px;
-    font-size: 18px;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
+    p.b {
+        padding-left: 100px;
+        padding-right: 550px;
+        font-size: 18px;
+        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        text-align: justify;
+      }
 
     </style>
 
 <body>
+  
   <div  id="navbar" > 
     <img src="Logo 1.png" id="logo">
-    <a href="#footer">Contact Us</a>
-    <a href="#footer">About Us</a> 
+    <a href="membership.html">Membership</a>
+    <a href="Videos.html">Workout Videos</a> 
     <div id="dropdown">
       <button id="dropbtn">Workout Tutorials
         <i class="fa fa-caret-down"></i>
@@ -158,18 +161,11 @@
         <a href="weight_lost.html">Weightloss Workout</a> 
       </div>
     </div>
-    <div id="dropdown">
-      <button id="dropbtn">Home
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div id="dropdown-content">
-        <a href="Videos.html">Workout Videos</a> 
-        <a href="membership.html">Membership</a>
-      </div>
-    </div>
+      <a href="Fitness Website.html">Home</a>
   </div>
+  <br>
      
-    <img src="images/booty.jpg" class="image">
+    <img src="images/4.jpg" class="image"><br>
     <br><h1>7 Exercises for a Bigger Butt</h1><br>
     <p class="a">Ready to add some mass to your backside? You can perform the following butt-boosting exercises in one workout, or you can add them to a lower body or full body routine at least 2 days per week.<br><br>
     Start out slowly with just one set of each exercise. As the exercises get easier to do, you can work up to two or three sets of each.</p>
@@ -264,10 +260,10 @@
               <form >  
                     <input type="text" class="form-control form-control-sm" placeholder="Enter your email">       
                   </form>
-                  <button class="btn btn-dark btn-sm ms-2" type="button" >SIGN UP</button>
+                  <button class="btn btn-dark btn-sm ms-2" type="button" title="Click here to sign up">SIGN UP</button>
             </div>
             </div>
           </div>
-        </div>
+        </div><br><br>
       </footer>
     </html>
