--- a/webpages/meal-plan.html
+++ b/webpages/meal-plan.html
@@ -14,8 +14,8 @@
 
   <div  id="navbar" > 
     <img src="Logo 1.png" id="logo">
-    <a href="#footer">Contact Us</a>
-    <a href="#footer">About Us</a> 
+    <a href="membership.html">Membership</a>
+    <a href="Videos.html">Workout Videos</a> 
     <div id="dropdown">
       <button id="dropbtn">Workout Tutorials
         <i class="fa fa-caret-down"></i>
@@ -29,23 +29,17 @@
         <a href="weight_lost.html">Weightloss Workout</a> 
       </div>
     </div>
-    <div id="dropdown">
-      <button id="dropbtn">Home
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div id="dropdown-content">
-        <a href="Videos.html">Workout Videos</a> 
-        <a href="membership.html">Membership</a>
-      </div>
-    </div>
+      <a href="Fitness Website.html">Home</a>
   </div>
+  <br>
 
   <div class="container mt-5 pt-3">
   <h1 >1-Week Healthy and Balanced Meal Plan Ideas</h1>
   <img src="images/plan.jpg" alt="mealplan">
 
+  
+  <h2 style="padding-left: 680px;">Why Nutrition is Important for a Healthy and Balanced Diet</h2>
   <div class="nutrition">
-  <h2>Why Nutrition is Important for a Healthy and Balanced Diet</h2>
     <p>Planning a daily menu isn't difficult as long as each meal and snack has some protein, fiber, complex carbohydrates, and a little bit of fat.</p>
     <p>Meal planning can help keep you on track, no matter what your nutrition goal is. Prepping and planning doesn’t have to be time-intensive and complicated. A few simple steps, including basic meal constructs, making a shopping list, shopping strategically, and methodically preparing food ahead of time, are what make meal planning a helpful tool to keep you energized, meet your nutrition goals, reduce food waste, and save money.</p>
   </div>
@@ -113,7 +107,7 @@
         </tr>
         </tbody>
       </table><br><br>
-
+      <hr>
       <p>Planning healthy meals isn't difficult, but if you're not used to it, the planning can take a little practice. The examples we provided should give you a great start. Don't feel discouraged if you don't stick to the plan exactly as outlined—it's OK to make variations that fit your lifestyle and needs. Do your best to incorporate healthy choices into your day—vegetables, fruit, lean proteins, beans and legumes, and whole grains are always smart bets.</p>
       <p>We recognize that meal plans may not be appropriate for all, especially those with disordered eating habits. If you or a loved one are coping with an eating disorder, contact the National Eating Disorders Association (NEDA) Helpline for support at 1-800-931-2237.</p>
     </div>
@@ -138,10 +132,10 @@
         <form >  
               <input type="text" class="form-control form-control-sm" placeholder="Enter your email">       
             </form>
-            <button class="btn btn-dark btn-sm ms-2" type="button" >SIGN UP</button>
+            <button class="btn btn-dark btn-sm ms-2" type="button" title="Click here to sign up">SIGN UP</button>
       </div>
       </div>
     </div>
-  </div>
+  </div><br><br>
 </footer>
 </html>
