--- a/webpages/membership.html
+++ b/webpages/membership.html
@@ -11,33 +11,26 @@
 </head>
 <body>
 
-    <div  id="navbar" > 
-        <img src="Logo 1.png" id="logo">
-        <a href="#footer">Contact Us</a>
-        <a href="#footer">About Us</a> 
-        <div id="dropdown">
-          <button id="dropbtn">Workout Tutorials
-            <i class="fa fa-caret-down"></i>
-          </button>
-          <div id="dropdown-content">
-            <a href="arms.html">Arm Workout</a> 
-            <a href="abs.html">Abs Workout</a>  
-            <a href="butt.html">Booty Workout</a> 
-            <a href="belly.html">Belly Workout</a> 
-            <a href="legs.html">Legs Workout</a> 
-            <a href="weight_lost.html">Weightloss Workout</a> 
-          </div>
-        </div>
-        <div id="dropdown">
-          <button id="dropbtn">Home
-            <i class="fa fa-caret-down"></i>
-          </button>
-          <div id="dropdown-content">
-            <a href="Videos.html">Workout Videos</a> 
-            <a href="membership.html">Membership</a>
-          </div>
-        </div>
+  <div  id="navbar" > 
+    <img src="Logo 1.png" id="logo">
+    <a href="membership.html">Membership</a>
+    <a href="Videos.html">Workout Videos</a> 
+    <div id="dropdown">
+      <button id="dropbtn">Workout Tutorials
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div id="dropdown-content">
+        <a href="arms.html">Arm Workout</a> 
+        <a href="abs.html">Abs Workout</a>  
+        <a href="butt.html">Booty Workout</a> 
+        <a href="belly.html">Belly Workout</a> 
+        <a href="legs.html">Legs Workout</a> 
+        <a href="weight_lost.html">Weightloss Workout</a> 
       </div>
+    </div>
+      <a href="Fitness Website.html">Home</a>
+  </div>
+  <br>
 
 <form>
     <div class="container py-5 mt-5">
@@ -105,7 +98,7 @@
     </div>
     
     </div>
-    <input type="submit" value="Submit" >
+    <input type="submit" title="Click to submit" value="Submit" >
 </div>
   </form>
 
@@ -126,7 +119,7 @@
           <form >  
                 <input type="text" class="form-control form-control-sm" placeholder="Enter your email">       
               </form>
-              <button class="btn btn-dark btn-sm ms-2" type="button" >SIGN UP</button>
+              <button class="btn btn-dark btn-sm ms-2" type="button" title="Click here to sign up">SIGN UP</button>
         </div>
         </div>
       </div>
