--- a/webpages/Contact Us.html
+++ b/webpages/Contact Us.html
@@ -98,8 +98,8 @@
   <body>
     <div  id="navbar" > 
       <img src="Logo 1.png" id="logo">
-      <a href="#footer">Contact Us</a>
-      <a href="#footer">About Us</a> 
+      <a href="membership.html">Membership</a>
+      <a href="Videos.html">Workout Videos</a> 
       <div id="dropdown">
         <button id="dropbtn">Workout Tutorials
           <i class="fa fa-caret-down"></i>
@@ -113,16 +113,9 @@
           <a href="weight_lost.html">Weightloss Workout</a> 
         </div>
       </div>
-      <div id="dropdown">
-        <button id="dropbtn">Home</a>
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div id="dropdown-content">
-          <a href="Videos.html">Workout Videos</a> 
-          <a href="membership.html">Membership</a>
-        </div>
-      </div>
+        <a href="Fitness Website.html">Home</a>
     </div>
+    <br>
 
   <div class="container-fluid py-5 bg-light text-black" id=mytext>
     <h2>Contact Us</h2><br><br>
@@ -156,10 +149,10 @@
         <form >  
               <input type="text" class="form-control form-control-sm" placeholder="Enter your email">       
             </form>
-            <button class="btn btn-dark btn-sm ms-2" type="button" >SIGN UP</button>
+            <button class="btn btn-dark btn-sm ms-2" type="button" title="Click here to sign up">SIGN UP</button>
       </div>
       </div>
     </div>
-  </div>
+  </div><br><br>
 </footer>
 </html>
