--- a/webpages/Fitness Website.html
+++ b/webpages/Fitness Website.html
@@ -12,8 +12,8 @@
 
   <div  id="navbar" > 
     <img src="Logo 1.png" id="logo">
-    <a href="#footer">Contact Us</a>
-    <a href="#footer">About Us</a> 
+    <a href="membership.html">Membership</a>
+    <a href="Videos.html">Workout Videos</a> 
     <div id="dropdown">
       <button id="dropbtn">Workout Tutorials
         <i class="fa fa-caret-down"></i>
@@ -27,15 +27,7 @@
         <a href="weight_lost.html">Weightloss Workout</a> 
       </div>
     </div>
-    <div id="dropdown">
-      <button id="dropbtn">Home</a>
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div id="dropdown-content">
-        <a href="Videos.html">Workout Videos</a> 
-        <a href="membership.html">Membership</a>
-      </div>
-    </div>
+      <a href="Fitness Website.html">Home</a>
   </div>
 <br>
   <body>
@@ -124,12 +116,12 @@ function showSlides() {
     <div class="container1">
       <div class="photos">
         <img src="images/mealplan.jpg" >
-        <h3>1 Week Balanced Meal Plan Ideas <a href="meal-plan.html">Read more</a></h3>
+        <h4>1 Week Balanced Meal Plan Ideas <a href="meal-plan.html" title="Click here to read the article" >Read more</a></h4>
       </div>
 
       <div class="photos">
-        <a href=""><img src="images/healthy diet.jpg"></a>
-        <h3 class="desc">11 Best Muscle-Building Foods <a href="healthy-food.html">Read more</a></h3>
+       <img src="images/healthy diet.jpg">
+        <h4 class="desc">11 Best Muscle-Building Foods <a href="healthy-food.html" title="Click here to read the article">Read more</a></h4>
       </div>
 
     </div>
@@ -149,28 +141,28 @@ function showSlides() {
       <div class="container">
 
         <div class="gallery">
-          <a href="arms.html"><img src="images/arms.jpg" class="hover-shadow"></a>
+          <a href="arms.html" title="Click here to see the article" ><img src="images/arms.jpg" class="hover-shadow "></a>
         </div>
   
         <div class="gallery">
-          <a href="Abs.html" ><img src="images/abs.jpg" class="hover-shadow"></a>
+          <a href="Abs.html" title="Click here to see the article" ><img src="images/abs.jpg" class="hover-shadow"></a>
 
         </div>
   
         <div class="gallery">
-          <a href="butt.html"><img src="images/booty.jpg" class="hover-shadow"></a>
+          <a href="butt.html" title="Click here to see the article" ><img src="images/booty.jpg" class="hover-shadow"></a>
         </div>
   
         <div class="gallery">
-          <a href="belly.html"><img src="images/belly.jpg" class="hover-shadow"></a>
+          <a href="belly.html" title="Click here to see the article" ><img src="images/belly.jpg" class="hover-shadow"></a>
         </div>
   
         <div class="gallery">
-          <a href="legs.html"><img src="images/legs.jpg" class="hover-shadow"></a>
+          <a href="legs.html" title="Click here to see the article" ><img src="images/legs.jpg" class="hover-shadow"></a>
         </div>
   
         <div class="gallery">
-          <a href="weight_lost.html"><img src="images/weightloss.jpg" class="hover-shadow"></a>
+          <a href="weight_lost.html" title="Click here to see the article" ><img src="images/weightloss.jpg" class="hover-shadow"></a>
         </div>
   
      </div>
@@ -193,10 +185,10 @@ function showSlides() {
         <form >  
               <input type="text" class="form-control form-control-sm" placeholder="Enter your email">       
             </form>
-            <button class="btn btn-dark btn-sm ms-2" type="button" >SIGN UP</button>
+            <button class="btn btn-dark btn-sm ms-2" type="button" title="Click here to sign up">SIGN UP</button>
       </div>
       </div>
     </div>
-  </div>
+  </div><br><br>
 </footer>
 </html>
