--- a/webpages/healthy-food.html
+++ b/webpages/healthy-food.html
@@ -14,8 +14,8 @@
     
   <div  id="navbar" > 
     <img src="Logo 1.png" id="logo">
-    <a href="#footer">Contact Us</a>
-    <a href="#footer">About Us</a> 
+    <a href="membership.html">Membership</a>
+    <a href="Videos.html">Workout Videos</a> 
     <div id="dropdown">
       <button id="dropbtn">Workout Tutorials
         <i class="fa fa-caret-down"></i>
@@ -29,16 +29,9 @@
         <a href="weight_lost.html">Weightloss Workout</a> 
       </div>
     </div>
-    <div id="dropdown">
-      <button id="dropbtn">Home
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div id="dropdown-content">
-        <a href="Videos.html">Workout Videos</a> 
-        <a href="membership.html">Membership</a>
-      </div>
-    </div>
+      <a href="Fitness Website.html">Home</a>
   </div>
+  <br>
 
       <div class="container py-5 px-5">
         <h1 >11 Best Muscle-Building Foods: What to Eat to Gain Muscle</h1>
@@ -141,10 +134,10 @@
         <form >  
               <input type="text" class="form-control form-control-sm" placeholder="Enter your email">       
             </form>
-            <button class="btn btn-dark btn-sm ms-2" type="button" >SIGN UP</button>
+            <button class="btn btn-dark btn-sm ms-2" type="button" title="Click here to sign up">SIGN UP</button>
       </div>
       </div>
     </div>
-  </div>
+  </div><br><br>
 </footer>
 </html>
