--- a/webpages/legs.html
+++ b/webpages/legs.html
@@ -129,8 +129,10 @@
       }
       p.b {
         padding-left: 100px;
+        padding-right: 500px;
         font-size: 18px;
         font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        text-align: justify;
       }
 
       #footer {
@@ -142,8 +144,8 @@
     
     <div  id="navbar" > 
       <img src="Logo 1.png" id="logo">
-      <a href="#footer">Contact Us</a>
-      <a href="#footer">About Us</a> 
+      <a href="membership.html">Membership</a>
+      <a href="Videos.html">Workout Videos</a> 
       <div id="dropdown">
         <button id="dropbtn">Workout Tutorials
           <i class="fa fa-caret-down"></i>
@@ -157,19 +159,11 @@
           <a href="weight_lost.html">Weightloss Workout</a> 
         </div>
       </div>
-      <div id="dropdown">
-        <button id="dropbtn">Home
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div id="dropdown-content">
-          <a href="Videos.html">Workout Videos</a> 
-          <a href="membership.html">Membership</a>
-        </div>
-      </div>
+        <a href="Fitness Website.html">Home</a>
     </div>
       <br>
       
-      <img src="images/6.jpg" class="image">
+      <img src="images/6.jpg" class="image"><br>
       <h1>Exercises For Your Leg workout</h1>
       <p class="a">An effective workout isn’t complete without a proper warmup and cooldown.
         <br><br>For your warmup, aim to start with 5 minutes of light cardio to get your heart rate up and blood flowing. If you have time, hop on the foam roller for 5 minutes of soft-tissue release.
@@ -241,10 +235,10 @@
             <form >  
                   <input type="text" class="form-control form-control-sm" placeholder="Enter your email">       
                 </form>
-                <button class="btn btn-dark btn-sm ms-2" type="button" >SIGN UP</button>
+                <button class="btn btn-dark btn-sm ms-2" type="button" title="Click here to sign up">SIGN UP</button>
           </div>
           </div>
         </div>
-      </div>
+      </div><br><br>
     </footer>
     </html>
