--- a/webpages/weight_lost.html
+++ b/webpages/weight_lost.html
@@ -130,8 +130,10 @@
       }
       p.b {
         padding-left: 100px;
+        padding-right: 550px;
         font-size: 18px;
         font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        text-align: justify;
       }
 
       </style>
@@ -140,8 +142,8 @@
     
     <div  id="navbar" > 
       <img src="Logo 1.png" id="logo">
-      <a href="#footer">Contact Us</a>
-      <a href="#footer">About Us</a> 
+      <a href="membership.html">Membership</a>
+      <a href="Videos.html">Workout Videos</a> 
       <div id="dropdown">
         <button id="dropbtn">Workout Tutorials
           <i class="fa fa-caret-down"></i>
@@ -155,19 +157,11 @@
           <a href="weight_lost.html">Weightloss Workout</a> 
         </div>
       </div>
-      <div id="dropdown">
-        <button id="dropbtn">Home
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div id="dropdown-content">
-          <a href="Videos.html">Workout Videos</a> 
-          <a href="membership.html">Membership</a>
-        </div>
-      </div>
+        <a href="Fitness Website.html">Home</a>
     </div>
       <br>
      
-      <img src="images/7.jpg" class="image">
+      <img src="images/7.jpg" class="image"><br>
       <h1>Different Exercises You Need To Loose Weight</h1>
       <p class="a">There are many types of physical activity can support weight loss by increasing the number of calories that you burn. The amount of weight you can expect to lose may vary depending on your age, diet, and starting weight. Aside from dieting, exercising is one of the most common strategies employed by those trying to shed extra pounds. It burns calories, and this plays a key role in weight loss. In addition to helping, you lose weight, exercise has many other benefits, including improved mood, stronger bones, and a reduced risk of many chronic diseases<br><br> 
       Weight loss refers to a decrease in your overall body weight from muscle, water, and fat losses. Fat loss refers to weight loss from fat, and it’s a more specific and healthful goal than weight loss. However, it can be difficult to know whether you’re losing weight from fat or muscle.<br><br>
@@ -237,10 +231,10 @@
             <form >  
                   <input type="text" class="form-control form-control-sm" placeholder="Enter your email">       
                 </form>
-                <button class="btn btn-dark btn-sm ms-2" type="button" >SIGN UP</button>
+                <button class="btn btn-dark btn-sm ms-2" type="button" title="Click here to sign up">SIGN UP</button>
           </div>
           </div>
         </div>
-      </div>
+      </div><br><br>
     </footer>
     </html>
