--- a/fitness-website/Fitness Website.html
+++ b/fitness-website/Fitness Website.html
@@ -145,7 +145,7 @@ function showSlides() {
         </div>
   
         <div class="gallery">
-          <a href="Abs.html" title="Click here to see the article" ><img src="images/abs.jpg" class="hover-shadow"></a>
+          <a href="abs.html" title="Click here to see the article" ><img src="images/abs.jpg" class="hover-shadow"></a>
 
         </div>
   
